<resources>
    <string name="app_name">Kamaleon</string>
    <string name="title_activity_actividad_inicial">ActividadInicial</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Siguiente</string>
    <string name="previous">Atras</string>
    <string name="email_label">Ingrese su e-mail</string>
    <string name="name_label">Ingrese su nombre</string>
    <string name="password_label">Ingrese su contraseña</string>
    <string name="Login_label">Iniciar Sesión</string>
    <string name="Register_label">Registrate</string>
    <string name="Forgot_label">Olvide mi contraseña</string>
    <string name="phone_label">Ingrese su numero telefonico</string>
    <string name="password_confirmar_label">Confirme su contraseña</string>
    <string name="CancelarRegistro_label">Ya Tengo Cuenta</string>
    <string name="olvide_Password">Olvidé mi contraseña</string>
    <string name="continuar">Continuar</string>
    <string name="cancelar">Cancelar</string>
    <string name="passwordNew">Ingrese su nueva contraseña</string>
    <string name="home_tittle">Información Tienda</string>
    <string name="profile_tittle">Mi perfil</string>
    <string name="comment_tittle">Comentarios</string>
    <string name="product_tittle">Mis productos</string>
    <string name="product_label">Productos</string>
    <string name="home_label">Home</string>
    <string name="comment_label">Comentarios</string>
    <string name="profile_label">Mi perfil</string>
    <string name="product_detail">Detalles del producto</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="edit_profile">Editar Perfil</string>

</resources>