<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home_label"/>

    <item
        android:id="@+id/productFragment"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/product_label"/>

    <item
        android:id="@+id/commentFragment"
        android:enabled="true"
        android:icon="@drawable/ic_comment_dots"
        android:title="@string/comment_label"/>

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_user"
        android:title="@string/profile_label"/>

</menu>