<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordOlvidadoContinuarFragment">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView2"
        android:layout_width="220dp"
        android:layout_height="120dp"

        android:src="@drawable/logo_letras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/TextOlvidePassword"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginVertical="5dp"

        />

    <TextView
        android:id="@+id/TextOlvidePassword"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/lato_black"
        android:gravity="center"
        android:text="@string/olvide_Password"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/editTextPasswordcomfir"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintVertical_chainStyle="packed"

        ></TextView>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPasswordcomfir"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/passwordNew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextOlvidePassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordConfirmaconfir"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPasswordConfirmaconfir"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/password_confirmar_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordcomfir"
        app:layout_constraintBottom_toTopOf="@id/buttonContinuarconfir"
        app:endIconMode="password_toggle"
        android:layout_marginVertical="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonContinuarconfir"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/lato_black"

        android:hint="@string/continuar"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/buttonCancelarconfir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPasswordConfirmaconfir" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancelarconfir"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_black"
        android:hint="@string/cancelar"
        android:textColorHint="@color/purple_200"
        android:textSize="16sp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/buttonContinuarconfir" />


</androidx.constraintlayout.widget.ConstraintLayout>